[project]
name = "s3-mcp"
version = "0.1.0"
description = "MCP server for Amazon S3 object storage operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.33",
    "boto3-stubs[essential]>=1.37.33",
    "environs>=14.1.1",
    "fastmcp>=2.1.0",
]

[project.scripts]
s3-mcp = "main:main"

[tool.setuptools]
py-modules = ["main", "env"]


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]
